apps/kubernetes/k3s/apps/hoarder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoarder
  namespace: hoarder
spec:
  selector:
    app: hoarder
  ports:
    - name: http
      port: 3000
      targetPort: 3000
