apps/kubernetes/k3s/apps/hoarder/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hoarder
  namespace: hoarder
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hoarder.hughboi.cc`)
      kind: Rule
      services:
        - name: hoarder
          port: 3000
  tls:
    secretName: hughboi-tls
